--- a/static/css/_form.scss
+++ b/static/css/_form.scss
@@ -1,10 +1,19 @@
 input.form-control {
-    border: none;
+    border: none !important;
     border-radius: 7px;
     background-color: $accent-main;
+    height: 24px + 12px;
 
+    &[readonly] {
+        background-color: $accent-main;
+    }
 
     &.form-control:focus, &.form-control:focus-within {
         background-color: $accent-main;
+        box-shadow: 0 0 0 0.2rem darken($accent-main, 10%);
+
+        &[readonly] {
+            box-shadow: none;
+        }
     }
 }
