--- a/static/css/_collapse.scss
+++ b/static/css/_collapse.scss
@@ -16,6 +16,7 @@
     right: 0px;
     background: #00000047;
     z-index: -2;
+    overflow: scroll;
 
     // transform: scale(0.8);
     opacity: 0;
