--- a/static/css/main.css
+++ b/static/css/main.css
@@ -156,6 +156,7 @@ body {
   right: 0px;
   background: #00000047;
   z-index: -2;
+  overflow: scroll;
   opacity: 0;
   -webkit-filter: blur(10px);
           filter: blur(10px);
