--- a/static/css/main.css
+++ b/static/css/main.css
@@ -143,6 +143,10 @@ body {
   border-radius: 7px;
 }
 
+[data-section="generated-list"] [data-label="record"] {
+  cursor: pointer;
+}
+
 [data-section="generated-list"] [data-label="record"] svg {
   width: 30px;
   fill: #4e7d7d;
