--- a/static/css/_base.scss
+++ b/static/css/_base.scss
@@ -114,10 +114,11 @@ body {
         svg.feather {
             margin-right: 8px;
             width: 20px;
-            stroke-width: 2;
+            stroke-width: 2.5;
             stroke: $accent-2;
         }
     }
+    
 
     &.btn-close {
         position: absolute;
@@ -129,6 +130,18 @@ body {
             --icon-dim: 15px;
             transform: translate(2px, -1px);
             transform: translate(3px, -2px);
+        }
+    }
+
+    &.btn-warning, &.btn-warning:focus, &.btn-warning:hover {
+        color: #867171;
+
+        &::after {
+            background-color: #efcfcf;
+        }
+
+        svg.feather {
+            stroke: #867171;
         }
     }
 }
@@ -144,6 +157,8 @@ body {
 [data-label="qrCode"] {
     // border: 20px solid white;
     border-radius: 7px;
+    width: 160px;
+    height: 160px;
 }
 
 [data-section="generated-list"] {
