--- a/static/css/_base.scss
+++ b/static/css/_base.scss
@@ -47,6 +47,7 @@ $border-radius: 7px;
 }
 
 body {
+    position: relative;
     z-index: 0;
     background-color: white
 }
@@ -146,7 +147,34 @@ body {
     }
 }
 
+#toastContainer {
+    --distance: 30px;
+    position: fixed;
+    top: var(--distance);
+    right: 0px;
+    z-index: 100000;
 
+    .toast {
+        max-width: 260px;
+        margin-bottom: 17px;
+        border-radius: $border-radius 0px àpx $border-radius;
+        box-shadow: none;
+        border: none;
+        background-color: $accent-main;
+
+        p {
+            margin-bottom: 0px;
+
+            &:last-of-type {
+                font-family: $font-scnd;
+            }
+        }
+
+        .feather {
+            stroke-width: 3px;
+        }
+    }
+}
 
 .animated {
     transition: all .3s ease-in-out;
@@ -159,6 +187,12 @@ body {
     border-radius: 7px;
     width: 160px;
     height: 160px;
+
+    img {
+        border-radius: 7px;
+        width: 160px;
+        height: 160px;
+    }
 }
 
 [data-section="generated-list"] {
